Set First row as large

--- a/src/Row.css
+++ b/src/Row.css
@@ -20,3 +20,11 @@
 .row_poster:hover {
   transform: scale(1.08); /* For zoom on hover effect */
 }
+
+.row_posterLarge {
+  max-height: 250px;
+}
+
+.row_posterLarge:hover {
+  transform: scale(1.09);
+}
